trunk/Archive2/cb/776cba884dd0cf/output
+ g++-4.8 -std=c++11 -O3 -Wall -pedantic -Wextra -pthread -Wno-unused-variable -Wno-unused-parameter main.cpp
main.cpp: In function 'int main()':
main.cpp:14:15: error: no matching function for call to 'Type::Type(Type&)'
     Type t1 = a;
               ^
main.cpp:14:15: note: candidate is:
main.cpp:4:5: note: Type::Type()
     Type() {};
     ^
main.cpp:4:5: note:   candidate expects 0 arguments, 1 provided
main.cpp:17:15: error: no matching function for call to 'Type::Type(Type1&)'
     Type t2 = b;
               ^
main.cpp:17:15: note: candidate is:
main.cpp:4:5: note: Type::Type()
     Type() {};
     ^
main.cpp:4:5: note:   candidate expects 0 arguments, 1 provided
